--- a/index.html
+++ b/index.html
@@ -127,24 +127,30 @@ $(document).ready(function () {
 <pre><code>## Loading required package: grid</code></pre>
 <pre class="r"><code>library(lattice)
 library(lme4)</code></pre>
+<pre><code>## Warning: package 'lme4' was built under R version 3.3.2</code></pre>
 <pre><code>## Loading required package: Matrix</code></pre>
 <pre class="r"><code>library(effects)
 library(qpcR)</code></pre>
 <pre><code>## Loading required package: MASS</code></pre>
 <pre><code>## Loading required package: minpack.lm</code></pre>
+<pre><code>## Warning: package 'minpack.lm' was built under R version 3.3.2</code></pre>
 <pre><code>## Loading required package: rgl</code></pre>
-<pre><code>## Warning in rgl.init(initValue, onlyNULL): RGL: unable to open X11 display</code></pre>
-<pre><code>## Warning: 'rgl_init' failed, running with rgl.useNULL = TRUE</code></pre>
+<pre><code>## Warning: package 'rgl' was built under R version 3.3.2</code></pre>
 <pre><code>## Loading required package: robustbase</code></pre>
+<pre><code>## Warning: package 'robustbase' was built under R version 3.3.2</code></pre>
 <pre class="r"><code>library(Hmisc)</code></pre>
+<pre><code>## Warning: package 'Hmisc' was built under R version 3.3.2</code></pre>
 <pre><code>## Loading required package: survival</code></pre>
+<pre><code>## Warning: package 'survival' was built under R version 3.3.2</code></pre>
 <pre><code>## 
 ## Attaching package: 'survival'</code></pre>
 <pre><code>## The following object is masked from 'package:robustbase':
 ## 
 ##     heart</code></pre>
 <pre><code>## Loading required package: Formula</code></pre>
+<pre><code>## Warning: package 'Formula' was built under R version 3.3.2</code></pre>
 <pre><code>## Loading required package: ggplot2</code></pre>
+<pre><code>## Warning: package 'ggplot2' was built under R version 3.3.2</code></pre>
 <pre><code>## 
 ## Attaching package: 'Hmisc'</code></pre>
 <pre><code>## The following objects are masked from 'package:base':
